# ost-clarin-skg

./: Dockerfile  README.md  pyproject.toml
conf/: settings.toml
resources/sparql/: product.txt  products.txt
src/: main.py
src/ost_clairin_skg/: commons.py  main.py  public.py
src/ost_clairin_skg/api/v1/: metrics.py  product.py  root.py
src/ost_clairin_skg/infra/: commons.py
src/ost_clairin_skg/services/: graphdb_connector.py
