[project]
name = "ost-clarin-skg-if"
version = "0.1.3-dev"
title = "OSTrails Clarin SKG-IF API Service"
description = "The project is developing a standard interoperability framework called SKG-IF to ensure that different SKG implementations can exchange information."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi>=0.118.1",
    "pyld>=2.0.4",
    "tomli>=2.2.1",
    "uvicorn>=0.37.0",
]
